admission/ValidatingAdmissionPolicy/policies/volume-types/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-volume-types-namespace-optout-warn-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 361630ea-550f-5e1c-a01a-3a5180700395
  labels:
    allowed-volume-types.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    allowed-volume-types.security.kolteq.com/audit: 'false-true'
    allowed-volume-types.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-volume-types
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/warn
        operator: In
        values:
        - baseline
        - restricted
      - key: allowed-volume-types.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-volume-types-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 361630ea-550f-5e1c-a01a-3a5180700395
  labels:
    allowed-volume-types.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/warn: enabled
    allowed-volume-types.security.kolteq.com/audit: 'false-true'
    allowed-volume-types.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: allowed-volume-types
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: allowed-volume-types.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-volume-types-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 361630ea-550f-5e1c-a01a-3a5180700395
  labels:
    allowed-volume-types.security.kolteq.com/warn: 'false-true'
    allowed-volume-types.security.kolteq.com/audit: 'false-true'
    allowed-volume-types.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-volume-types
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: allowed-volume-types.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-volume-types-namespace-optout-audit-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 361630ea-550f-5e1c-a01a-3a5180700395
  labels:
    allowed-volume-types.security.kolteq.com/audit: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    allowed-volume-types.security.kolteq.com/enforce: 'false-true'
    allowed-volume-types.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-volume-types
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/audit
        operator: In
        values:
        - baseline
        - restricted
      - key: allowed-volume-types.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-volume-types-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 361630ea-550f-5e1c-a01a-3a5180700395
  labels:
    allowed-volume-types.security.kolteq.com/audit: 'false-true'
    security.kolteq.com/audit: enabled
    allowed-volume-types.security.kolteq.com/enforce: 'false-true'
    allowed-volume-types.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-volume-types
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: allowed-volume-types.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-volume-types-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 361630ea-550f-5e1c-a01a-3a5180700395
  labels:
    allowed-volume-types.security.kolteq.com/audit: 'false-true'
    allowed-volume-types.security.kolteq.com/enforce: 'false-true'
    allowed-volume-types.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-volume-types
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: allowed-volume-types.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-volume-types-namespace-optout-deny-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 361630ea-550f-5e1c-a01a-3a5180700395
  labels:
    allowed-volume-types.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    allowed-volume-types.security.kolteq.com/audit: 'false-true'
    allowed-volume-types.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-volume-types
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/enforce
        operator: In
        values:
        - baseline
        - restricted
      - key: allowed-volume-types.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-volume-types-namespace-optout-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 361630ea-550f-5e1c-a01a-3a5180700395
  labels:
    allowed-volume-types.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/enforce: enabled
    allowed-volume-types.security.kolteq.com/audit: 'false-true'
    allowed-volume-types.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-volume-types
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: allowed-volume-types.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-volume-types-namespace-optin-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 361630ea-550f-5e1c-a01a-3a5180700395
  labels:
    allowed-volume-types.security.kolteq.com/enforce: 'false-true'
    allowed-volume-types.security.kolteq.com/audit: 'false-true'
    allowed-volume-types.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-volume-types
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: allowed-volume-types.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
