admission/ValidatingAdmissionPolicy/policies/volume-types/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: allowed-volume-types
  annotations:
    security.kubeapt.io/displayName: 'Volume Types'
    security.kubeapt.io/description: ValidatingAdmissionPolicy for volume-types.
    security.kubeapt.io/resource: Pods
    security.kubeapt.io/severity: "5"
    security.kubeapt.io/remediation: Adjust workloads to satisfy the volume-types policy.
    policies.kolteq.com/validatingAdmissionPolicy: 361630ea-550f-5e1c-a01a-3a5180700395
  labels:
    allowed-volume-types.security.kolteq.com/audit: 'false-true'
    allowed-volume-types.security.kolteq.com/enforce: 'false-true'
    allowed-volume-types.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods"]
  validations:
    - expression: >
        !has(object.spec.volumes) ||
        object.spec.volumes.all(v,
          has(v.configMap) ||
          has(v.csi) ||
          has(v.downwardAPI) ||
          has(v.emptyDir) ||
          has(v.ephemeral) ||
          has(v.persistentVolumeClaim) ||
          has(v.projected) ||
          has(v.secret)
        )
      message: >
        Each item in spec.volumes[*] must set one of: configMap, csi, downwardAPI, emptyDir,
        ephemeral, persistentVolumeClaim, projected, or secret.
